# wasm-frontend

./: README.md  build-dev.sh  build.sh  new-build-dev.sh  å
rustywasm/: Cargo.toml
rustywasm/src/: backend.rs  lib.rs  map.rs  settings.rs  state.rs
rustywasm/src/state/: mod.rs  transform.rs
webywasm/: index.html  package.json  vite.config.ts
webywasm/src/: main.ts  style.css
