
[package]
name = "rustywasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
comms = { git = "https://github.com/CS-25-SW-8-07/geo-gearloes",  version = "0.1.0" }
eframe = { version = "0.31.1", features = ["glow", "wgpu"] }
geo-traits = "0.2.0"
geo-types = "0.7.15"
itertools = "0.14.0"
js-sys = "0.3.77"
log = "0.4.26"
nalgebra = "0.33.2"
rstar = "0.12.2"
rusty-roads = { git = "https://github.com/CS-25-SW-8-07/geo-gearloes", branch = "update-box-query", version = "0.1.0" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console", "Window", "Geolocation"] }
web-time = "1.1.0"
csv = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
getrandom = {version = "0.3.2", features = ["wasm_js"]}
uuid = { version = "1.16.0", features = ["rng-getrandom"]}
burn = { git = "https://github.com/open-spaced-repetition/burn.git", branch = "browser-wasm-burn-v0.16.0", version = "0.16.0", features=["wgpu", "train", "browser"] }

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
